deploy/10Deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: firebase-auth
  namespace: firebase-auth
spec:
  replicas: 1
  template:
    metadata:
      name: firebase-auth
      labels:
        app: firebase-auth
    spec:
      containers:
      - name: firebase-auth
        image: gcr.io/wiresafe-project/firebase-auth:latest
        readinessProbe:
          httpGet:
            port: 80
            path: /
