deploy/20Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: firebase-auth
  namespace: firebase-auth
spec:
  selector:
    app: firebase-auth
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
